<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityAgendarCita">

    <ScrollView
        android:id="@+id/Scrolldecita"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12sp"
                android:contentDescription="@string/logo_descripcion"
                app:srcCompat="@drawable/logo_chocosalud" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/saludo"
                android:textColor="?attr/colorPrimary"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/subtitulo"
                android:textColor="?attr/colorOnBackground"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/especialidad"
                android:textColor="@color/azul_chocosalud"
                android:textStyle="bold"
                tools:textSize="16sp" />

            <Spinner
                android:id="@+id/selectordetipo"
                style="@android:style/Widget.Material.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTintMode="src_in"
                android:drawingCacheQuality="auto"
                android:entries="@array/opciones_citas" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/contacto"
                android:textColor="@color/azul_chocosalud"
                android:textStyle="bold"
                tools:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textcontacto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputcontacto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefono"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/fecha"
                android:textColor="@color/azul_chocosalud"
                android:textStyle="bold"
                tools:textSize="16sp" />

            <CalendarView
                android:id="@+id/calendarView"
                style="@android:style/Widget.DeviceDefault.Light.CalendarView"
                android:layout_width="match_parent"
                android:layout_height="311dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/botonRegistrar2"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/Enviar"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>